# code-review

./: README.md  pyproject.toml  requirements.txt  review_pipeline.py
.github/workflows/: ai-review.yaml  ai-review.yml
app/analyzer/: security_analyzer.py
app/services/: github_services.py
src/: ai_pipeline.py  cli.py  config.py  diff_parser.py  github_client.py  models.py  reporter.py  review_pipeline.py
src/app/analyzer/: static_analysis_service.py
src/app/reviewer/: diff_parser.py
src/app/utils/: logger_config.py
